<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@drawable/curved_background_layout"
    android:elevation="2dp"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewStatus"
        style="@style/MediumTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/not_activated_info" />

    <RadioGroup
        android:id="@+id/switchView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/outline"
        android:checkedButton="@+id/deactivate"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/activate"
            style="@style/BigTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_floating_background"
            android:button="@null"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/activate" />

        <RadioButton
            android:id="@+id/deactivate"
            style="@style/BigTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_floating_background"
            android:button="@null"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/deactivated" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        style="@style/SmallTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/long_press_to_copy" />

    <LinearLayout
        android:id="@+id/layout_random_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewRandomHeading"
            style="@style/BigTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/random_word" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/curved_background"
            android:fillViewport="true"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/layout_random_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_loading"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/normal_font"
                    android:gravity="center"
                    android:text="@string/loading"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/buttonFullscreen"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark"
        android:clickable="true"
        android:elevation="1dp"
        android:focusable="true"
        android:fontFamily="@font/big_font"
        android:gravity="center"
        android:text="@string/show_fullscreen_dictionary"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/note_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/note"
            android:src="@drawable/ic_note"
            app:tint="@color/colorAccent" />

        <TextView
            style="@style/MediumTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/take_notes_with_subsections" />

        <TextView
            style="@style/SmallTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/outline"
            android:padding="4dp"
            android:text="@string/ad"
            app:tint="@color/colorAccent" />
    </LinearLayout>

    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/native_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/curved_background_layout"
        android:elevation="1dp"
        android:padding="4dp"
        app:gnt_template_type="@layout/gnt_medium_template_view" />
</LinearLayout>