<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tutorial_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/background_dialog"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tutorial_image"
        android:src="@drawable/tutorial_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_1" />

    <TextView
        android:id="@+id/text_1"
        style="@style/MediumTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/click_to_activate_the_dictionary"
        app:layout_constraintBottom_toTopOf="@id/image_1"
        app:layout_constraintEnd_toStartOf="@+id/image_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_1"
        app:layout_constraintTop_toBottomOf="@+id/text_tutorial_heading"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_tutorial_heading"
        style="@style/BigTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_use_the_floating_dictionary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tutorial_image"
        android:src="@drawable/tutorial_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_2" />

    <TextView
        android:id="@+id/text_2"
        style="@style/MediumTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dictionary_is_activated"
        app:layout_constraintEnd_toEndOf="@+id/image_2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/image_1"
        app:layout_constraintTop_toBottomOf="@+id/text_1" />

    <ImageView
        android:id="@+id/image_3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tutorial_image"
        android:src="@drawable/tutorial_three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_3" />

    <TextView
        android:id="@+id/text_3"
        style="@style/MediumTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/click_to_hide_the_dictionary"
        app:layout_constraintEnd_toStartOf="@+id/image_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_3"
        app:layout_constraintTop_toBottomOf="@+id/image_1" />

    <TextView
        android:id="@+id/text_4"
        style="@style/MediumTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/click_to_display_the_dictionary"
        app:layout_constraintEnd_toEndOf="@+id/image_4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/image_3"
        app:layout_constraintTop_toBottomOf="@+id/image_2" />

    <ImageView
        android:id="@+id/image_4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tutorial_image"
        android:src="@drawable/tutorial_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_4"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/text_dismiss"
        style="@style/BigTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:text="@string/dismiss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_4" />
</androidx.constraintlayout.widget.ConstraintLayout>
