<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/entry_activity_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/drag_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_shape"
        android:padding="8dp"
        android:contentDescription="@string/drag_view"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorPrimaryDark" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_layout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/curved_shape_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drag_view">

        <AutoCompleteTextView
            android:id="@+id/search_input_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/curved_background"
            android:clickable="true"
            android:completionThreshold="1"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="4dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/search_word"
            android:imeOptions="actionSearch"
            android:inputType="text|textAutoComplete"
            android:maxLines="1"
            android:padding="4dp"
            android:textColor="@color/big_text_color"
            android:textColorHint="@color/hint_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/speaker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/speaker"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/speaker"
            android:src="@drawable/ic_speaker"
            app:layout_constraintBottom_toBottomOf="@+id/search_input_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_input_view"
            app:tint="@color/colorPrimaryDark" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_input_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
