<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="8dp"
    tools:context=".activities.BookmarkActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutShareBookmarks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/layoutDeleteBookmarks"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageViewShare"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorAccent" />

        <TextView
            style="@style/MediumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/share_bookmarks"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewShare"
            app:layout_constraintStart_toEndOf="@+id/imageViewShare"
            app:layout_constraintTop_toTopOf="@+id/imageViewShare" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDeleteBookmarks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/layoutShareBookmarks"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewDeleteBookMark"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/delete_all"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorAccent" />

        <TextView
            style="@style/MediumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/delete_all"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewDeleteBookMark"
            app:layout_constraintStart_toEndOf="@+id/imageViewDeleteBookMark"
            app:layout_constraintTop_toTopOf="@+id/imageViewDeleteBookMark" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutShareBookmarks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookmark_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/native_ad_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/native_ad_bookmark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:gnt_template_type="@layout/gnt_small_template_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>